# experiments

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: [homework]knn.ipynb  loans.ipynb  santander_cs.ipynb
